--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^4.5.0",
     "dateformat": "^3.0.3",
     "react": "^16.13.1",
+    "react-bootstrap": "^1.3.0",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
