--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-scripts": "3.4.1",
     "react-scroll": "^1.8.0",
     "reactstrap": "^8.5.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
