--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-favicon": "^2.0.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
+    "react-country-region-selector": "^2.1.0",
     "react-datepicker": "^3.1.3",
     "react-dom": "^16.13.1",
     "react-redux": "^7.2.0",
