--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.8.0",
+    "react-time-picker": "^4.0.1",
     "reactstrap": "^8.5.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
