--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   },
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.0",
+    "@material-ui/lab": "^4.0.0-alpha.56",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -23,7 +25,6 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-scroll": "^1.8.0",
-    "react-time-picker": "^4.0.1",
     "reactstrap": "^8.5.0",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
