remove unused variables etc

--- a/prepros.config
+++ b/prepros.config
@@ -911,6 +911,16 @@
     },
     "files": [
       {
+        "file": "src/components/sidebar/style/sidebar.scss",
+        "config": {
+          "tasks": {
+            "minify-css": {
+              "enable": true
+            }
+          }
+        }
+      },
+      {
         "file": "src/styles/css/style.css",
         "config": {
           "autoCompile": true
