interested user display, user profile

--- a/prepros.config
+++ b/prepros.config
@@ -911,6 +911,12 @@
     },
     "files": [
       {
+        "file": "src/components/inbox/inbox-page/interested-user/style/interested.scss",
+        "config": {
+          "sourceMap": true
+        }
+      },
+      {
         "file": "src/styles/css/style.css",
         "config": {
           "autoCompile": true
